[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "value_iteration"
version = "1.0.0"
maintainers = [
  { name="Jasmine Burgess", email="j.j.burgess@lancaster.ac.uk" },
]
authors = [
  { name="Jasmine Burgess", email="j.j.burgess@lancaster.ac.uk" },
]
description = "Determine the value function and optimal policy ."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
]

[project.urls]
homepage = "https://github.com/jasmine-burgess/value_iteration
